--- a/gala.css
+++ b/gala.css
@@ -5,6 +5,6 @@ html, body
   padding: 0;
   text-align: center;
  /* Doy estilo de gala */ 
-  backrground-color: #bfbfbf;
-  color: #bfbf7f;
+  backrground-color: #7f7f7f;
+  color: #cfcf3b;
 }
