--- a/gala.css
+++ b/gala.css
@@ -1,7 +1,8 @@
 html, body
 {
- /* Centro Texto */ 
+ /* Acomodo Texto */ 
   margin: 0;
+  margin-top: 3em;
   padding: 0;
   text-align: center;
  /* Doy estilo de gala */ 
