--- a/gala.css
+++ b/gala.css
@@ -7,5 +7,5 @@ html, body
   text-align: center;
  /* Doy estilo de gala */ 
   backrground-color: #1f1f1f;
-  color: #cfcf3b;
+  color: #cf3b3c;
 }
