Actualizar gala.css
colores mejores

--- a/gala.css
+++ b/gala.css
@@ -6,6 +6,6 @@ html, body
   padding: 0;
   text-align: center;
  /* Doy estilo de gala */ 
-  backrground-color: #1f1f1f;
-  color: #cf3b3c;
+  backrground-color: #333333;
+  color: #cf3b1c;
 }
