--- a/gala.css
+++ b/gala.css
@@ -6,6 +6,6 @@ html, body
   padding: 0;
   text-align: center;
  /* Doy estilo de gala */ 
-  backrground-color: #333333;
+  background-color: #333333;
   color: #cf3b1c;
 }
