Actualizar gala.css
mejores colores.

--- a/gala.css
+++ b/gala.css
@@ -6,6 +6,6 @@ html, body
   padding: 0;
   text-align: center;
  /* Doy estilo de gala */ 
-  background-color: #333333;
-  color: #cf3b1c;
+  background-color: #131313;
+  color: #cfcf1c;
 }
