Actualizar gala.css
Correcion en código de color, # agregado

--- a/gala.css
+++ b/gala.css
@@ -15,7 +15,7 @@ a
   /* camufló el enlace para estilo más moderno*/
       color: #cfddee;
       text-decoration: dot;
-      text-decoration-color: ff3f3f;
+      text-decoration-color: #ff3f3f;
 }
 
 a:visited
